--- a/src/frontend/scss/components/_footer.scss
+++ b/src/frontend/scss/components/_footer.scss
@@ -152,6 +152,7 @@ $richie-footer-poweredby-link-fontcolor: $white !default;
         @include sv-flex(0, 0, auto);
         font-size: 1.4em;
         line-height: 1.1;
+        margin-right: 1rem;
       }
     }
   }
