--- a/src/backend/funmooc/templates/richie/base.html
+++ b/src/backend/funmooc/templates/richie/base.html
@@ -22,7 +22,7 @@
                     <button class="topbar__hamburger"
                             data-target="main-menu" aria-label="menu" aria-expanded="false">&#8801;</button>
                     <a href="/" class="topbar__brand__link">
-                        <img src="{% static "images/ed-fr_bleu.png" %}" class="topbar__brand__logo" alt="{{ SITE.name }}">
+                        <img src="{% static "images/ed-hq.png" %}" class="topbar__brand__logo" alt="{{ SITE.name }}">
                     </a>
                 </div>
                 <div class="topbar__menu">
@@ -48,8 +48,8 @@
                     </ul>
                 </div>
                 <div class="body-footer__brand">
-                    <a href="/" class="body-footer__brand__link">
-                        <img src="{% static "images/ed-fr_bleu.png" %}" class="body-footer__brand__logo" alt="">
+                    <a class="body-footer__brand">
+                        <p>École des dirigeants - Hydro-Québec</p>
                     </a>
                 </div>
                 <div class="body-footer__mentions">
