--- a/src/backend/funmooc/templates/courses/cms/fragment_course_content.html
+++ b/src/backend/funmooc/templates/courses/cms/fragment_course_content.html
@@ -17,65 +17,10 @@
 </section>
 {% endif %}
 
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_skills" %}
-<div class="course-detail__content__row course-detail__content__skills">
-  <h2 class="course-detail__content__row__title">{% trans "What you will learn" %}</h2>
-  <p>{% trans "At the end of this course, you will be able to:" %}</p>
-  {% page_placeholder "course_skills" page %}
+{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_information" %}
+<div class="course-detail__content__row course-detail__content__information">
+  {% page_placeholder "course_information" page %}
 </div>
-{% endif %}
-
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_format" %}
-<section class="course-detail__content__row course-detail__content__format">
-  <h2 class="course-detail__content__row__title">{% trans 'Format' %}</h2>
-  {% page_placeholder "course_format" page or %}
-    <p>{% trans 'How is the course structured?' %}</p>
-  {% endpage_placeholder %}
-</section>
-{% endif %}
-
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_prerequisites" %}
-<section class="course-detail__content__row course-detail__content__prerequisites">
-  <h2 class="course-detail__content__row__title">{% trans 'Prerequisites' %}</h2>
-  {% page_placeholder "course_prerequisites" page or %}
-    <p>{% trans 'What are the prerequisites to follow this course?' %}</p>
-  {% endpage_placeholder %}
-</section>
-{% endif %}
-
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_plan" %}
-<section class="course-detail__content__row course-detail__content__plan">
-  <h2 class="course-detail__content__row__title">{% trans 'Course plan' %}</h2>
-  {% page_placeholder "course_plan" page or %}
-    <p>{% trans 'Enter here the detailed course plan.' %}</p>
-  {% endpage_placeholder %}
-</section>
-{% endif %}
-
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_assessment" %}
-<section class="course-detail__content__row course-detail__content__assessment">
-  <h2 class="course-detail__content__row__title">{% trans 'Assessment and certification' %}</h2>
-  {% page_placeholder "course_assessment" page or %}
-    <p class="course-detail__content__assessment__placeholder">
-      {% trans "How is progress evaluated and/or certified?" %}
-    </p>
-  {% endpage_placeholder %}
-</section>
-{% endif %}
-
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_organizations" %}
-<section class="section course-detail__content__row course-detail__content__organizations">
-  <h2 class="section__title course-detail__content__row__title course-detail__content__organizations__title">
-    {% trans 'Organizations' %}
-  </h2>
-  <div class="section__items course-detail__content__organizations__items">
-    {% page_placeholder "course_organizations" page or %}
-      <p class="course-detail__content__organizations__placeholder">
-        {% trans "What are the organizations publishing this course?" %}
-      </p>
-    {% endpage_placeholder %}
-  </div>
-</section>
 {% endif %}
 
 {% if page.publisher_is_draft or not page|is_empty_placeholder:"course_team" %}
@@ -93,32 +38,23 @@
 </section>
 {% endif %}
 
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_information" %}
+{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_more_information" %}
 <div class="course-detail__content__row course-detail__content__information">
-  {% page_placeholder "course_information" page %}
+  {% page_placeholder "course_more_information" page %}
 </div>
 {% endif %}
 
-{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_license_content" or not page|is_empty_placeholder:"course_license_participation" %}
-<section class="course-detail__content__row course-detail__content__license">
-  <h2 class="course-detail__content__row__title course-detail__content__license__title">{% trans 'License' %}</h2>
-
-  <div class="course-detail__content__license__item">
-    <h3 class="course-detail__content__license__item__title">{% trans 'License for the course content' %}</h3>
-    {% with header_level=4 %}
-      {% page_placeholder "course_license_content" page or %}
-        <p>{% trans 'What is the license for the course content?' %}</p>
-      {% endpage_placeholder %}
-    {% endwith %}
-  </div>
-
-  <div class="course-detail__content__license__item">
-    <h3 class="course-detail__content__license__item__title">{% trans 'License for the content created by course participants' %}</h3>
-    {% with header_level=4 %}
-      {% page_placeholder "course_license_participation" page or %}
-        <p>{% trans 'What is the license for the content created by course participants?' %}</p>
-      {% endpage_placeholder %}
-    {% endwith %}
+{% if page.publisher_is_draft or not page|is_empty_placeholder:"course_organizations" %}
+<section class="section course-detail__content__row course-detail__content__organizations">
+  <h2 class="section__title course-detail__content__row__title course-detail__content__organizations__title">
+    {% trans 'Organizations' %}
+  </h2>
+  <div class="section__items course-detail__content__organizations__items">
+    {% page_placeholder "course_organizations" page or %}
+      <p class="course-detail__content__organizations__placeholder">
+        {% trans "What are the organizations publishing this course?" %}
+      </p>
+    {% endpage_placeholder %}
   </div>
 </section>
 {% endif %}
